構造工学論文集の略称間違いを修正
JSEのところをJSTとしていた．

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h3>
     　　　　収録文献： <a href="./pdfs/JSCE/">土木学会論文集</a>，
     <a href="./pdfs/JWS/">溶接学会論文集</a>，
-    <a href="./pdfs/JST/">構造工学論文集</a>,
+    <a href="./pdfs/JSE/">構造工学論文集</a>,
     <a href="./pdfs/JSSC/">鋼構造論文集</a>，
     応用力学論文集(準備中)　<br/></br>
     注意：検索機能を有効にするためにはスクリプト(ActiveX)の実行を許可する必要があります．
